--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorDone">#C8E6C9</color>
+    <color name="redAccent">#de1626</color>
+    <color name="lightGray">#F2F2F2</color>
 </resources>
